<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stable"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/tile"
    android:layout_marginBottom="15dp">

    <LinearLayout
        android:id="@id/stable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/cairo"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:autofillHints="vaccine name"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/edit" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/Expandable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nextDose"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cairo"
                    android:text="@string/doses"
                    android:textColor="@color/anti_flash_white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/doses"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="25dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cairo"
                    android:text="@string/_4"
                    android:textColor="@color/anti_flash_white"
                    android:textSize="16sp"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/adminLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/administrated"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/cairo"
                    android:text="@string/duration"
                    android:textColor="@color/anti_flash_white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/cairo"
                    android:text="@string/_365"
                    android:textColor="@color/anti_flash_white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/descLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:fontFamily="@font/cairo"
                    android:text="@string/description"
                    android:textSize="20sp"
                    android:textColor="@color/anti_flash_white"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/cairo"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit"
                    android:textColor="@color/anti_flash_white"
                    android:textSize="16sp"
                    tools:ignore="Autofill,LabelFor" />

            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#77FDC830"
                android:text="@string/save"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
