<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stable"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/tile"
    android:layout_marginBottom="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/cairo"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:layout_marginEnd="10dp"
            android:src="@drawable/edit_off" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/bin" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/Expandable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/dates">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nextDose"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@color/anti_flash_white"
                android:fontFamily="@font/cairo"
                android:text="@string/next_does_due"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dateND"
                android:layout_width="139dp"
                android:layout_height="30dp"
                android:layout_marginStart="91dp"
                android:fontFamily="@font/cairo"
                android:textColor="@color/anti_flash_white"
                android:text="@string/_12_04_2024"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/adminLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/administrated"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:fontFamily="@font/cairo"
                android:text="@string/last_administration"
                android:textSize="20sp"
                android:textColor="@color/anti_flash_white"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/dateADM"
                android:layout_width="134dp"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:fontFamily="@font/cairo"
                android:textColor="@color/anti_flash_white"
                android:text="@string/_12_04_2024"
                android:textSize="20sp" />
        </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/desc"
            android:layout_below="@id/dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/cairo"
            android:textColor="@color/anti_flash_white"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>
